--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,84 +1,70 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,},
-  preview={brownian-motion.gif}
-}
-
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
-}
-
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
+@article{chen2023text2tex,
+  abbr={ArXiv},
+  title={Text2Tex: Text-driven Texture Synthesis via Diffusion Models},
+  author={Chen, Dave Zhenyu and Siddiqui, Yawar and Lee, Hsin-Ying and Tulyakov, Sergey and Nie{\ss}ner, Matthias},
+  journal={arXiv preprint arXiv:2303.11396 },
+  preview={text2tex.gif},
+  year={2023},
+  pdf={https://arxiv.org/pdf/2303.11396.pdf},
+  code={https://github.com/daveredrum/Text2Tex},
+  website={https://daveredrum.github.io/Text2Tex/},
   selected={true}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@article{chen2022unit3d,
+  abbr={ArXiv},
+  title={UniT3D: A Unified Transformer for 3D Dense Captioning and Visual Grounding},
+  author={Chen, Dave Zhenyu and Hu, Ronghang and Chen, Xinlei and Nie{\ss}ner, Matthias and Chang, Angel X},
+  journal={arXiv preprint arXiv:2212.00836},
+  preview={unit3d.jpg},
+  year={2022},
+  pdf={https://arxiv.org/pdf/2212.00836.pdf},
+  selected={true}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@inproceedings{chen2022d3net,
+  abbr={ECCV},
+  title={D3Net: A Unified Speaker-Listener Architecture for 3D Dense Captioning and Visual Grounding},
+  author={Chen, Dave Zhenyu and Wu, Qirui and Nie{\ss}ner, Matthias and Chang, Angel X},
+  booktitle={European Conference on Computer Vision},
+  pages={487--505},
+  year={2022},
+  preview={d3net.jpg},
+  organization={Springer},
+  project={https://daveredrum.github.io/D3Net/},
+  pdf={https://arxiv.org/pdf/2112.01551.pdf},
+  code={https://github.com/daveredrum/D3Net},
+  selected={true}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@inproceedings{chen2021scan2cap,
+  abbr={CVPR},
+  title={Scan2Cap: Context-aware Dense Captioning in RGB-D Scans},
+  author={Chen, Dave Zhenyu and Gholami, Ali and Niessner, Matthias and Chang, Angel X.},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  pages={3193--3203},
+  year={2021},
+  preview={scan2cap.jpg},
+  project={https://daveredrum.github.io/Scan2Cap/},
+  pdf={https://arxiv.org/pdf/2012.02206.pdf},
+  code={https://github.com/daveredrum/Scan2Cap},
+  selected={true}
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+@inproceedings{chen2020scanrefer,
+  abbr={ECCV},
+  title={ScanRefer: 3D Object Localization in RGB-D Scans using Natural Language},
+  author={Chen, Dave Zhenyu and Chang, Angel X. and Niessner, Matthias},
+  booktitle={Computer Vision--ECCV 2020: 16th European Conference, Glasgow, UK, August 23--28, 2020, Proceedings, Part XX 16},
+  pages={202--221},
+  year={2020},
+  preview={scanrefer.jpg},
+  organization={Springer},
+  project={https://daveredrum.github.io/ScanRefer/},
+  pdf={https://arxiv.org/pdf/1912.08830.pdf},
+  code={https://github.com/daveredrum/ScanRefer},
+  selected={true}
 }
