update paper status & invited talks

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,7 @@
 ---
 
 @article{chen2023text2tex,
-  abbr={ArXiv},
+  abbr={ICCV},
   title={Text2Tex: Text-driven Texture Synthesis via Diffusion Models},
   author={Chen, Dave Zhenyu and Siddiqui, Yawar and Lee, Hsin-Ying and Tulyakov, Sergey and Nie{\ss}ner, Matthias},
   journal={arXiv preprint arXiv:2303.11396 },
@@ -15,12 +15,12 @@
 }
 
 @article{chen2022unit3d,
-  abbr={ArXiv},
+  abbr={ICCV},
   title={UniT3D: A Unified Transformer for 3D Dense Captioning and Visual Grounding},
   author={Chen, Dave Zhenyu and Hu, Ronghang and Chen, Xinlei and Nie{\ss}ner, Matthias and Chang, Angel X},
   journal={arXiv preprint arXiv:2212.00836},
   preview={unit3d.jpg},
-  year={2022},
+  year={2023},
   pdf={https://arxiv.org/pdf/2212.00836.pdf},
   selected={true}
 }
