--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,26 +1,45 @@
 ---
 ---
 
-@article{chen2023text2tex,
+@misc{chen2024scenetex,
+  abbr={CVPR},
+  title={SceneTex: High-Quality Texture Synthesis for Indoor Scenes via Diffusion Priors}, 
+  author={Chen, Dave Zhenyu and Li, Haoxuan and Lee, Hsin-Ying and Tulyakov, Sergey and Nie{\ss}ner, Matthias},
+  year={2024},
+  eprint={2311.17261},
+  archivePrefix={arXiv},
+  primaryClass={cs.CV},
+  preview={scenetex.png},
+  pdf={https://arxiv.org/pdf/2311.17261.pdf},
+  code={https://github.com/daveredrum/SceneTex},
+  website={https://daveredrum.github.io/SceneTex/},
+  selected={true}
+}
+
+@InProceedings{chen2023text2tex,
   abbr={ICCV},
-  title={Text2Tex: Text-driven Texture Synthesis via Diffusion Models},
   author={Chen, Dave Zhenyu and Siddiqui, Yawar and Lee, Hsin-Ying and Tulyakov, Sergey and Nie{\ss}ner, Matthias},
-  journal={arXiv preprint arXiv:2303.11396 },
-  preview={text2tex.gif},
+  title={Text2Tex: Text-driven Texture Synthesis via Diffusion Models},
+  booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV)},
+  month={October},
   year={2023},
+  pages={18558-18568},
+  preview={text2tex.gif},
   pdf={https://arxiv.org/pdf/2303.11396.pdf},
   code={https://github.com/daveredrum/Text2Tex},
   website={https://daveredrum.github.io/Text2Tex/},
   selected={true}
 }
 
-@article{chen2022unit3d,
+@InProceedings{chen2022unit3d,
   abbr={ICCV},
+  author={Chen, Dave Zhenyu and Hu, Ronghang and Chen, Xinlei and Nie{\ss}ner, Matthias and Chang, Angel X.},
   title={UniT3D: A Unified Transformer for 3D Dense Captioning and Visual Grounding},
-  author={Chen, Dave Zhenyu and Hu, Ronghang and Chen, Xinlei and Nie{\ss}ner, Matthias and Chang, Angel X},
-  journal={arXiv preprint arXiv:2212.00836},
-  preview={unit3d.jpg},
+  booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV)},
+  month={October},
   year={2023},
+  pages={18109-18119},
+  preview={unit3d.jpg},
   pdf={https://arxiv.org/pdf/2212.00836.pdf},
   selected={true}
 }
